[package]
name = "internal_api"
version = "0.1.0"
edition = "2024"

[dependencies]
application = { path = "../../crates/application" }
domain = { path = "../../crates/domain" }
infrastructure = { path = "../../crates/infrastructure" }
shared = { path = "../../crates/shared" }

axum = "0.8.6"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
